Fix footer overflow - stack contents on small devices (#76)
* fix footer overflow on mobile - stack contents

* replicate footer on all html pages

* fix footer order change from md to sm

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,6 @@ h1 {
 footer {
     bottom: 0;
     width: 100%;
-    height: 60px;
 }
 
 .footer-text {
@@ -455,10 +454,22 @@ footer {
     color: rgb(53 201 204 / 99%);
 }
 
-@media only screen and (max-width: 600px) {
-    .social-icons li:not(:last-child) {
-    margin-right: 10px;
+@media only screen and (max-width: 575px) {
+    .footer-text {
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
+
+    .social-icons {
+        padding-left: 0;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .social-icons li:not(:last-child) {
+        margin-right: 10px;
+    }
+
     .social-icons a {
     width: 30px;
     height: 30px;
